fix: correct spacing for distribution details table, ec-style

--- a/src/styles/components-ec-style/_distributions.scss
+++ b/src/styles/components-ec-style/_distributions.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.distribution-details-table {
+  td {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
 .distributions__item {
   border-bottom: none !important;
   //justify-content: end;
